crates/analyzer/tests/snapshots/errors__non_pub_init.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `__init__` function is not public
  ┌─ compile_errors/non_pub_init.fe:2:5
  │  
2 │ ╭     fn __init__():
3 │ │         pass
  │ ╰────────────^ `__init__` function must be public
  │  
  = Hint: Add the `pub` modifier.
  = Example: `pub fn __init__():`


