crates/analyzer/tests/snapshots/errors__not_emittable.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: the trait bound `NotEmittable: Emittable` is not satisfied
   ┌─ compile_errors/not_emittable.fe:15:18
   │
15 │         ctx.emit(NotEmittable ( color: Color::Black ))
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Emittable` is not implemented for `NotEmittable`


