crates/analyzer/tests/snapshots/errors__not_in_scope_2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: cannot find value `y` in this scope
  ┌─ compile_errors/not_in_scope_2.fe:8:16
  │
8 │         return y
  │                ^ undefined


